new page, links between, bigger tests

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -1,3 +1,1 @@
-<h1>About page</h1>
-<p>My name is {{name}}. I'm {{age}} years old.</p>
-{% comment %}This is just a comment. It won't appear on the web page!{% endcomment %}
+<h1>Company About Page</h1>
